Ajout de la conclusion

--- a/DV_Lab1_Viz-iteurs_V2.ipynb
+++ b/DV_Lab1_Viz-iteurs_V2.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Data-and-Library-importation\" data-toc-modified-id=\"Data-and-Library-importation-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Data and Library importation</a></span></li><li><span><a href=\"#Functions-creation-for-the-description-and-improvement-of-the-Dataset\" data-toc-modified-id=\"Functions-creation-for-the-description-and-improvement-of-the-Dataset-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Functions creation for the description and improvement of the Dataset</a></span></li><li><span><a href=\"#Density-plot\" data-toc-modified-id=\"Density-plot-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Density plot</a></span></li><li><span><a href=\"#Plotting-with-transparency\" data-toc-modified-id=\"Plotting-with-transparency-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Plotting with transparency</a></span></li><li><span><a href=\"#Plotting-with-Bokeh\" data-toc-modified-id=\"Plotting-with-Bokeh-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Plotting with Bokeh</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Data-and-Library-importation\" data-toc-modified-id=\"Data-and-Library-importation-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Data and Library importation</a></span></li><li><span><a href=\"#Functions-creation-for-the-description-and-improvement-of-the-Dataset\" data-toc-modified-id=\"Functions-creation-for-the-description-and-improvement-of-the-Dataset-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Functions creation for the description and improvement of the Dataset</a></span></li><li><span><a href=\"#Density-plot\" data-toc-modified-id=\"Density-plot-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Density plot</a></span></li><li><span><a href=\"#Plotting-with-transparency\" data-toc-modified-id=\"Plotting-with-transparency-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Plotting with transparency</a></span></li><li><span><a href=\"#Plotting-with-Bokeh\" data-toc-modified-id=\"Plotting-with-Bokeh-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Plotting with Bokeh</a></span></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Conclusion</a></span></li></ul></div>"
    ]
   },
   {
@@ -918,11 +918,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 91,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-03T13:36:21.180856Z",
-     "start_time": "2018-11-03T13:36:21.175542Z"
+     "end_time": "2018-11-03T13:49:09.288592Z",
+     "start_time": "2018-11-03T13:49:09.282741Z"
     },
     "colab": {},
     "colab_type": "code",
@@ -943,11 +943,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 98,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-03T13:37:13.026657Z",
-     "start_time": "2018-11-03T13:37:12.450388Z"
+     "end_time": "2018-11-03T13:51:02.995884Z",
+     "start_time": "2018-11-03T13:51:02.400804Z"
     },
     "colab": {},
     "colab_type": "code",
@@ -2597,9 +2597,6 @@
     "        axi.contourf(image, levels=[110,120], colors='black', origin='image', extent=[0, 200, 0, 200])\n",
     "        axi.scatter(148,159, color='r')\n",
     "        \n",
-    "# for axi in range(len(ax)) :\n",
-    "#     ax[int(k/3)][k%3].contourf(image, levels=[110,120], colors='black', origin='image', extent=[0, 200, 0, 200])\n",
-    "#     ax[int(k/3)][k%3].scatter(148,159, color='r')\n",
     "    \n",
     "def init() : \n",
     "    pass\n",
@@ -2608,9 +2605,9 @@
     "    temp = geo[geo['Year']==i]\n",
     "    for j in range(len(cod_ename)) :\n",
     "        temp2 = temp[temp['cod_English_name']==j][['X','Y','cod_English_name','English_name', 'Year']]\n",
-    "#         xdata = (temp2['X'])\n",
-    "#         ydata = (temp2['Y'])\n",
-    "        tot_line[j].set_data(temp2['X'], temp2['Y'])\n",
+    "        xdata = (temp2['X'])\n",
+    "        ydata = (temp2['Y'])\n",
+    "        tot_line[j].set_data(xdata, ydata)\n",
     "        ax[int(j/3)][j%3].set_title(\"{} à l'année {}\".format(ename[j], i))\n",
     "    return tot_line\n",
     "\n",
@@ -3074,11 +3071,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we have obtained some interesting informations : First, some vocalization types are very rare, and we have to focus on singing and calling. Then, more than 80% of the records are in a good quality. The number of records increased neatly during the last ten years.\n",
+    "\n",
+    "Then, we have seen 2 very high-density zones of birds and some few denses others. Kasios plant is on a medium-density zone. \n",
+    "\n",
+    "The specie that we want to study : Rose-crested Blue Pipits, are located near Kasios plant originally. Their record number is highly correlated with Queenscoats, which barycenter is located further west.\n",
+    "\n",
+    "Kasios records are strangely located, they should not concern Rose-crested Blue Pipits, because it is very far from their original location."
+   ]
   }
  ],
  "metadata": {
